k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: edge-service
    namespace: polar
    labels:
        app: edge-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: edge-service
    template:
        metadata:
            name: edge-service
            labels:
                app: edge-service
        spec:
            containers:
                -   name: edge-service
                    image: "edge-service"
                    imagePullPolicy: IfNotPresent
                    lifecycle:
                        preStop:
                            exec:
                                command: [ "sh", "-c", "sleep 5" ]
                    ports:
                        -   containerPort: 9000
            restartPolicy: Always
